--- a/src/css/home.css
+++ b/src/css/home.css
@@ -49,9 +49,53 @@ p{
 }
 
 .dialogBoxStart{
-    transform: translate(35%, 0%) scaleX(-1);
-    height: 15em;
-    width: 40em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(40%, -25%);
 }
+
+.dialogBoxStart .dialogBox{
+    transform: scaleX(-1);
+    height: 10em;
+    width: 30em;
+}
+
+.apresentationText{
+    width: 25em;
+    height: 8em;
+    padding-bottom: 2em;
+    text-align: justify;
+
+}
+
+.sideMenu{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.sideMenu .icon{
+    width: 30px;
+    filter: invert(1);
+    transition: 0.2s ease-in-out;
+}
+
+.sideMenu .icon:hover{
+    transform: scale(1.2);
+}
+
+.sideMenu ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+
 
 
