--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -2,7 +2,6 @@
 
 .containerCarousel{
     display: flex;
-    align-items: center;
 }
 
 .carousel{
@@ -19,6 +18,11 @@
     height: 30px;
     width: 20px;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.imageCarousel:hover{
+    animation: arrowAnimation 1s infinite;
 }
 
 .imageCarousel.next{
@@ -56,7 +60,7 @@
 }
 
 .carousel .imageProject:hover{
-    transform: scale(1.01);
+    animation: projectAnimation 2s infinite;
 }
 
 .carousel .contents .description{
@@ -74,25 +78,47 @@
     width: 33em;
 }
 
-@keyframes downArrowAnimation {
+
+.containerDialog .dialogBoxCarousel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-40%, 25%);
+}
+
+
+.dialogBoxCarousel .dialogBox{
+    transform: scaleX(-1);
+    height: 10em;
+    width: 30em;
+}
+
+
+@keyframes arrowAnimation {
     0%{
-        transform: translateY(0px);
+        transform: scale(1.0);
+    }
+    50%{
+        transform: scale(1.2);
     }
     100%{
-        transform: translateY(10px);
-        visibility: hidden;
+        transform: scale(1.0);
     }
 }
 
-@keyframes upArrowAnimation {
+@keyframes projectAnimation {
     0%{
-        transform: translateY(0px);
+        transform: scale(1.0);
+    }
+    50%{
+        transform: scale(1.03);
     }
     100%{
-        transform: translateY(-10px);
-        visibility: hidden;
+        transform: scale(1.0);
     }
 }
+
+
 
 
 
