--- a/src/css/tecnology.css
+++ b/src/css/tecnology.css
@@ -26,10 +26,11 @@
 }
 
 .containerTec .dialogBoxTec p{
-    height: 10em;
-    width: 27em;
+    height: 6em;
+    width: 26em;
     text-align: justify;
-    margin-top: 1em;
+    margin-top: 1.0em;
+    overflow-y: auto;
 }
 
 .carouselTec .tecnology{
